Fixing spacing and sizing on project page

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -123,7 +123,7 @@
     line-height: 100%;
   }
 
-  .title-card {
+  div.title-card {
     margin: 15rem 10rem 10rem 10rem;
   }
 
@@ -147,6 +147,7 @@
   #chapter1 .content {
     display: block;
     width: 50%;
+    margin-top: -3rem;
   }
 
   ol li, ol span, ul li{
@@ -180,10 +181,9 @@
     bottom: 1rem;
   }
 
-  /* article.survey {
-   padding: 0;
-   margin-top: 0;
- } */
+  article.survey {
+      margin-top: -5rem;
+ }
 
  article.survey div.content {
    width: 58%;
@@ -219,7 +219,7 @@
    background-color: #FFA856;
    width: .9rem;
    height: 32rem;
-   margin-right: 2rem;
+   margin-right: -1rem;
    border-radius: 4rem;
  }
 
@@ -426,21 +426,13 @@
    /* margin: 0 20rem; */
    width: 70%;
    margin: 0 auto;
+   margin-top: -5rem;
  }
 
  p.text-box .quick-link:hover {
    color: #FFA856;
  }
 
-
-
- /* div.block {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
-   margin: 0 auto;
- } */
 
  article.user-flow div.box-1, article.user-flow div.box-2 {
    font-size: 2.2rem;
@@ -676,17 +668,19 @@
 
 img.brand-header {
   width: auto;
-  margin: 0 15rem 0 15rem;
+  margin: 0 auto;
+  margin-top: -5rem;
 }
 
 div.brand-story {
-  margin: 7.5rem 20rem 0 20rem;
+  margin: 0 auto;
+  width: 63%;
 }
 
 .brand-quote img.quote-img {
   width: 13%;
   position: relative;
-  right: 5.5rem;
+  right: 4.5rem;
 }
 
 div.brand-quote h2.main-quote {
@@ -698,7 +692,7 @@ div.brand-quote h2.main-quote {
 
 .brand-quote h2.by {
   font-weight: bolder;
-  padding-top: 1rem;
+  padding-top: 0.5rem;
   font-size: 3rem;
   font-family: 'Brandon Text Medium Italic', cursive;
 }
@@ -710,7 +704,8 @@ img.mood {
 }
 
 .logo-design {
-  margin: 0 20rem;
+  margin: 0 auto;
+  width: 63%;
 }
 
 img.logos {
@@ -724,11 +719,13 @@ div.color-palette {
   flex-direction: row-reverse;
   align-items: center;
   justify-content: center;
+  width: 85%;
+  margin: 0 auto;
 }
 
 .color-palette div.color {
   width: 40%;
-  margin-left: 5rem;
+  margin-left: 7.5rem;
   display: block;
 }
 
@@ -744,12 +741,15 @@ div.typography {
   align-items: center;
   flex-wrap: wrap;
   justify-content: center;
+  width: 85%;
+  margin: 0 auto;
 }
 
  div.typography div.type-content {
   width: 40%;
-  margin: 0 auto;
-  margin-left: 5rem;
+  display: block;
+  margin-right: 7.5rem;
+  margin-left: 2rem;
 }
 
 div.typography img.type-img {
@@ -764,7 +764,7 @@ div.typography img.type-img {
 }
 
 div.typography .style-button {
-  width: 15%;
+  width: 16%;
   font-family: 'Brandon Grotesque Black';
   font-size: 1.8rem;
   text-align: center;
@@ -803,19 +803,20 @@ div.typography .style-button {
 }
 
 #chapter5 .pg {
-  margin: 0 32rem;
-  padding: 0 5rem;
+  width: 70%;
+  margin: 0 auto;
   margin-top: 15rem;
 }
 
 article.hi-fi .content {
   text-align: center;
+  margin-top: -5rem;
 }
 
 article.hi-fi img {
-  width: 150%;
+  width: 100%;
   display: block;
-  margin: 5rem auto 0 -16rem;
+  margin: 5rem auto;
 }
 
 article.ab {
@@ -824,7 +825,7 @@ article.ab {
 
 article.ab .content {
   text-align: left;
-  margin: 10rem 25rem 5rem 25rem;
+  margin: 10rem auto 5rem auto;
   width: 50%;
 }
 
@@ -915,16 +916,14 @@ p.descs {
   margin: 0 auto;
 }
 
-article.testing {
-  display: flex;
-  margin: 10rem 32rem 0 32rem;
-  flex-direction: column;
-  align-items: center;
+article.testing div.content {
+  margin-bottom: 3rem;
 }
 
-
 article.testing {
   display: flex;
+  width: 50%;
+  margin: 10rem auto 0 auto;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -952,19 +951,24 @@ div.vid-responsive iframe {
 }
 
 article.short {
+  text-align: left;
+}
+
+article.short div.content {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 66.3%;
+  margin: 10rem auto 0 auto;
 }
-
 
 article.short div.callout-line {
   background-color: #FFA856;
   width: .9rem;
   height: 30rem;
-  margin-right: -36rem;
-  margin-left: 40rem;
+  margin-left: 34rem;
+  margin-right: -28rem;
   border-radius: 4rem;
   margin-bottom: 1rem;
 }
@@ -980,7 +984,7 @@ article.short div.callout {
 }
 
 article.short p.co-text {
-  width: 38%;
+  width: 42%;
   margin: 0 auto;
   text-align: left;
   font-size: 2.3rem;
@@ -994,6 +998,7 @@ article.icing {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
 }
 
 article.icing .content {
@@ -1064,6 +1069,10 @@ section.uno img {
 div.rogue-img img.center {
   display: flex;
   flex-direction: column;
+  width: 97%;
+  margin-left: 2rem;
+  margin-top: -1rem;
+  /* margin: 0 auto; */
 }
 
 div.rogue-img p.test-img-text {
@@ -1092,7 +1101,7 @@ div.section-wrapper {
   align-items: center;
   justify-content: center;
   margin: 20rem auto 0 auto;
-  padding-left: 10rem;
+  padding-left: 18rem;
 }
 
 section.dos {
@@ -1100,13 +1109,20 @@ section.dos {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-bottom: 7.5rem;
   margin-right: 10rem;
+  margin-top: -2rem;
 }
 
 section.dos .iteration-title {
-  width: 45rem;
+  width: 100%;
+  padding: 0;
   margin: 0;
+}
+
+section.dos p.text-box {
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 1rem;
 }
 
 section.dos img {
@@ -1122,9 +1138,16 @@ section.tres {
   margin-right: 10rem;
 }
 
+section.tres p.text-box {
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 1rem;
+}
+
 section.tres .iteration-title {
-  width: 45rem;
-  margin: 0;
+  width: 60%;
+  padding: 0;
+  margin: 5rem 0 0 0;
 }
 
 section.tres img {
@@ -1137,15 +1160,16 @@ section.tres img {
 section.cuatro .vid-responsive, section.cinco .vid-responsive, section.seis .vid-responsive {
   width: 60%;
   margin-top: 0rem;
-  padding-bottom: 50rem;
+  padding-bottom: 40rem;
+  margin-bottom: 0;
 }
 
 article.icing .callout-line {
   background-color: #FFA856;
   width: .9rem;
   height: 37rem;
-  margin-right: -36rem;
-  margin-left: 45rem;
+  margin-left: 34rem;
+  margin-right: -28rem;
   border-radius: 4rem;
 }
 
@@ -1159,7 +1183,7 @@ article.icing .callout {
 }
 
 article.icing p.co-text {
-  width: 38%;
+  width: 44%;
   margin: 0 auto;
   text-align: left;
   font-size: 2.3rem;
@@ -1193,11 +1217,14 @@ article.final-p h2 {
 
 article.final-p .text-box {
   font-size: 2rem;
+  padding-top: 1.5rem;
   font-family: 'Brandon Text Regular', sans-serif;
 }
 
 div.desktop-images-final {
   background-image: url("../images/project/background-swoop.png");
+  position: relative;
+  top: -5rem;
 }
 
 img.mobile-bg {
@@ -1264,7 +1291,7 @@ div.mobile-desktop-images img.final-mobile-one {
 } */
 
 div.CTA-buttons {
-  margin: 10rem 0 0rem 0;
+  margin: 0;
   padding: 0;
 }
 
@@ -1311,8 +1338,8 @@ div.key-learnings .concl-sub {
 .contact-box .contact-image img {
   width: 17%;
   position: relative;
-  left: 103rem;
-  top: 0;
+  left: 16rem;
+  top: -1rem;
   z-index: 1;
 }
 
@@ -1390,6 +1417,7 @@ ul.social-media {
   display: flex;
   align-items: center;
   flex-direction: row;
+  margin-right: -2.5rem;
   flex-wrap: wrap;
   font-size: 1.8rem;
   font-family: "Brandon Text Medium";
@@ -1410,7 +1438,7 @@ div.copyright p {
   text-align: left;
   font-size: 1.8rem;
   padding: 0.5rem 0 1rem 0;
-  margin-left: 10rem;
+  margin-left: 7rem;
   font-family: "Brandon Text Medium";
 }
 
